# ElaWidgetTools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-pyside6.yml
ElaWidgetTools/: CMakeLists.txt  ElaAppBar.cpp  ElaAppBar.h  ElaApplication.cpp  ElaAutoComplete.cpp  ElaAutoComplete.h  ElaCalendarPicker.cpp  ElaCaptcha.cpp  ElaCaptcha.h  ElaChatBubble.cpp  ElaChatBubble.h  ElaCheckBox.cpp  ElaCodeEditor.cpp  ElaCodeEditor.h  ElaComboBox.cpp  ElaComboBox.h  ElaCommandBar.cpp  ElaCommandBar.h  ElaContentDialog.cpp  ElaContentDialog.h  ElaCopyButton.cpp  ElaCopyButton.h  ElaCountdown.cpp  ElaCountdown.h  ElaDashboardGauge.cpp  ElaDashboardGauge.h  ElaDef.h  ElaDivider.cpp  ElaDivider.h  ElaDoubleSpinBox.cpp  ElaDropDownButton.cpp  ElaDropDownButton.h  ElaEmojiPicker.cpp  ElaEmojiPicker.h  ElaExpander.cpp  ElaExpander.h  ElaFloatButton.cpp  ElaFloatButton.h  ElaFlyout.cpp  ElaFlyout.h  (+107 more)
ElaWidgetTools/DeveloperComponents/: ElaAutoCompleteContainer.cpp  ElaAutoCompleteContainer.h  ElaAutoCompleteDelegate.cpp  ElaAutoCompleteDelegate.h  ElaCalendarPickerContainer.cpp  ElaCheckBoxStyle.cpp  ElaCodeEditorLineArea.h  ElaCodeHighlighter.h  ElaColorDisplayDelegate.cpp  ElaColorPicker.cpp  ElaComboBoxStyle.cpp  ElaDrawerContainer.cpp  ElaFooterDelegate.cpp  ElaGroupBoxStyle.cpp  ElaGroupBoxStyle.h  ElaKeyBinderContainer.cpp  ElaKeyBinderFnMonitor.h  ElaKeyBinderFnMonitor.mm  ElaMenuStyle.cpp  ElaMultiSelectComboBoxDelegate.cpp  ElaMultiSelectComboBoxDelegate.h  ElaNavigationNode.cpp  ElaNavigationStyle.cpp  ElaProgressBarStyle.cpp  ElaRollerPickerContainer.cpp  ElaScreenCapture.cpp  ElaScreenCapture.h  ElaScreenCapture.mm  ElaScrollBarStyle.h  ElaSpinBoxStyle.cpp  ElaSplitterHandle.cpp  ElaSplitterHandle.h  ElaSuggestBoxSearchViewContainer.cpp  ElaTableWidgetStyle.cpp  ElaTableWidgetStyle.h  ElaToolBarStyle.cpp  ElaToolButtonStyle.cpp  ElaTreeViewStyle.cpp  ElaVirtualListStyle.cpp  ElaVirtualListStyle.h  (+1 more)
ElaWidgetTools/private/: ElaAppBarPrivate.cpp  ElaAppBarPrivate.h  ElaApplicationPrivate.cpp  ElaApplicationPrivate.h  ElaAutoCompletePrivate.cpp  ElaAutoCompletePrivate.h  ElaCaptchaPrivate.h  ElaChatBubblePrivate.h  ElaCodeEditorPrivate.h  ElaComboBoxPrivate.cpp  ElaComboBoxPrivate.h  ElaCommandBarPrivate.h  ElaContentDialogPrivate.h  ElaCopyButtonPrivate.cpp  ElaCopyButtonPrivate.h  ElaCountdownPrivate.cpp  ElaCountdownPrivate.h  ElaDashboardGaugePrivate.h  ElaDividerPrivate.h  ElaDropDownButtonPrivate.h  ElaEmojiPickerPrivate.h  ElaExpanderPrivate.h  ElaFloatButtonPrivate.h  ElaFlyoutPrivate.h  ElaGroupBoxPrivate.cpp  ElaGroupBoxPrivate.h  ElaInfoBadgePrivate.h  ElaInfoBarPrivate.cpp  ElaInfoBarPrivate.h  ElaInputDialogPrivate.cpp  ElaInputDialogPrivate.h  ElaMarkdownViewerPrivate.h  ElaMessageBarPrivate.cpp  ElaMessageBarPrivate.h  ElaMessageCardPrivate.cpp  ElaMessageCardPrivate.h  ElaMessageDialogPrivate.cpp  ElaMessageDialogPrivate.h  ElaMultiSelectComboBoxPrivate.cpp  ElaMultiSelectComboBoxPrivate.h  (+52 more)
ElaWidgetToolsExample/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
ElaWidgetToolsExample/ExamplePage/: T_BaseComponents.cpp  T_BaseComponents.h  T_BasePage.cpp  T_CodeEditor.cpp  T_CodeEditor.h  T_ElaScreen.cpp  T_ElaScreen.h  T_Home.cpp  T_NewComponents.cpp  T_NewComponents.h  T_NewComponents2.cpp  T_NewComponents2.h  T_Popup.cpp  T_Popup.h  T_Router.cpp  T_Router.h  T_Setting.cpp  T_TableWidget.cpp  T_TableWidget.h
PySide6Example/: main.py  mainwindow.py
bindings/: CMakeLists.txt  bindings.xml  global.h
doc/: API.md
scripts/: generate_bindings.py  generate_docs.py
skill/: SKILL.md
(+13 files in other folders)
